--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
-name: Jest Tests CI
+name: Jest Tests
 
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: [ main, master]
   pull_request:
-    branches: [ main, master, develop ]
+    branches: [ main, master]
 
 jobs:
   test:
